bin = [
  { name = "variables1", path = "src/bin/src/bin/01_variables/variables1.rs" },
  { name = "variables1_sol", path = "src/bin/solutions/01_variables/variables1.rs" },
  { name = "variables2", path = "src/bin/01_variables/variables2.rs" },
  { name = "variables2_sol", path = "src/bin/solutions/01_variables/variables2.rs" },
  { name = "variables3", path = "src/bin//01_variables/variables3.rs" },
  { name = "variables3_sol", path = "src/bin/solutions/01_variables/variables3.rs" },
  { name = "variables4", path = "src/bin//01_variables/variables4.rs" },
  { name = "variables4_sol", path = "src/bin/solutions/01_variables/variables4.rs" },
  { name = "variables5", path = "src/bin//01_variables/variables5.rs" },
  { name = "variables5_sol", path = "src/bin/solutions/01_variables/variables5.rs" },
  { name = "variables6", path = "src/bin//01_variables/variables6.rs" },
  { name = "variables6_sol", path = "src/bin/solutions/01_variables/variables6.rs" },
  { name = "functions1", path = "src/bin//02_functions/functions1.rs" },
  { name = "functions1_sol", path = "src/bin/solutions/02_functions/functions1.rs" },
  { name = "functions2", path = "src/bin//02_functions/functions2.rs" },
  { name = "functions2_sol", path = "src/bin/solutions/02_functions/functions2.rs" },
  { name = "functions3", path = "src/bin//02_functions/functions3.rs" },
  { name = "functions3_sol", path = "src/bin/solutions/02_functions/functions3.rs" },
  { name = "functions4", path = "src/bin//02_functions/functions4.rs" },
  { name = "functions4_sol", path = "src/bin/solutions/02_functions/functions4.rs" },
  { name = "functions5", path = "src/bin//02_functions/functions5.rs" },
  { name = "functions5_sol", path = "src/bin/solutions/02_functions/functions5.rs" },
  { name = "if1", path = "src/bin//03_if/if1.rs" },
  { name = "if1_sol", path = "src/bin/solutions/03_if/if1.rs" },
  { name = "if2", path = "src/bin//03_if/if2.rs" },
  { name = "if2_sol", path = "src/bin/solutions/03_if/if2.rs" },
  { name = "if3", path = "src/bin//03_if/if3.rs" },
  { name = "if3_sol", path = "src/bin/solutions/03_if/if3.rs" },
  { name = "quiz1", path = "src/bin//quizzes/quiz1.rs" },
  { name = "quiz1_sol", path = "src/bin/solutions/quizzes/quiz1.rs" },
  { name = "primitive_types1", path = "src/bin//04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types1_sol", path = "src/bin/solutions/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "src/bin//04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types2_sol", path = "src/bin/solutions/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "src/bin//04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types3_sol", path = "src/bin/solutions/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "src/bin//04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types4_sol", path = "src/bin/solutions/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "src/bin//04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types5_sol", path = "src/bin/solutions/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "src/bin//04_primitive_types/primitive_types6.rs" },
  { name = "primitive_types6_sol", path = "src/bin/solutions/04_primitive_types/primitive_types6.rs" },
  { name = "vecs1", path = "src/bin//05_vecs/vecs1.rs" },
  { name = "vecs1_sol", path = "src/bin/solutions/05_vecs/vecs1.rs" },
  { name = "vecs2", path = "src/bin//05_vecs/vecs2.rs" },
  { name = "vecs2_sol", path = "src/bin/solutions/05_vecs/vecs2.rs" },
  { name = "move_semantics1", path = "src/bin//06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics1_sol", path = "src/bin/solutions/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "src/bin//06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics2_sol", path = "src/bin/solutions/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "src/bin//06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics3_sol", path = "src/bin/solutions/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "src/bin//06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics4_sol", path = "src/bin/solutions/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "src/bin//06_move_semantics/move_semantics5.rs" },
  { name = "move_semantics5_sol", path = "src/bin/solutions/06_move_semantics/move_semantics5.rs" },
  { name = "structs1", path = "src/bin//07_structs/structs1.rs" },
  { name = "structs1_sol", path = "src/bin/solutions/07_structs/structs1.rs" },
  { name = "structs2", path = "src/bin//07_structs/structs2.rs" },
  { name = "structs2_sol", path = "src/bin/solutions/07_structs/structs2.rs" },
  { name = "structs3", path = "src/bin//07_structs/structs3.rs" },
  { name = "structs3_sol", path = "src/bin/solutions/07_structs/structs3.rs" },
  { name = "enums1", path = "src/bin//08_enums/enums1.rs" },
  { name = "enums1_sol", path = "src/bin/solutions/08_enums/enums1.rs" },
  { name = "enums2", path = "src/bin//08_enums/enums2.rs" },
  { name = "enums2_sol", path = "src/bin/solutions/08_enums/enums2.rs" },
  { name = "enums3", path = "src/bin//08_enums/enums3.rs" },
  { name = "enums3_sol", path = "src/bin/solutions/08_enums/enums3.rs" },
  { name = "strings1", path = "src/bin//09_strings/strings1.rs" },
  { name = "strings1_sol", path = "src/bin/solutions/09_strings/strings1.rs" },
  { name = "strings2", path = "src/bin//09_strings/strings2.rs" },
  { name = "strings2_sol", path = "src/bin/solutions/09_strings/strings2.rs" },
  { name = "strings3", path = "src/bin//09_strings/strings3.rs" },
  { name = "strings3_sol", path = "src/bin/solutions/09_strings/strings3.rs" },
  { name = "strings4", path = "src/bin//09_strings/strings4.rs" },
  { name = "strings4_sol", path = "src/bin/solutions/09_strings/strings4.rs" },
  { name = "modules1", path = "src/bin//10_modules/modules1.rs" },
  { name = "modules1_sol", path = "src/bin/solutions/10_modules/modules1.rs" },
  { name = "modules2", path = "src/bin//10_modules/modules2.rs" },
  { name = "modules2_sol", path = "src/bin/solutions/10_modules/modules2.rs" },
  { name = "modules3", path = "src/bin//10_modules/modules3.rs" },
  { name = "modules3_sol", path = "src/bin/solutions/10_modules/modules3.rs" },
  { name = "hashmaps1", path = "src/bin//11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps1_sol", path = "src/bin/solutions/11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps2", path = "src/bin//11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps2_sol", path = "src/bin/solutions/11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps3", path = "src/bin//11_hashmaps/hashmaps3.rs" },
  { name = "hashmaps3_sol", path = "src/bin/solutions/11_hashmaps/hashmaps3.rs" },
  { name = "quiz2", path = "src/bin//quizzes/quiz2.rs" },
  { name = "quiz2_sol", path = "src/bin/solutions/quizzes/quiz2.rs" },
  { name = "options1", path = "src/bin//12_options/options1.rs" },
  { name = "options1_sol", path = "src/bin/solutions/12_options/options1.rs" },
  { name = "options2", path = "src/bin//12_options/options2.rs" },
  { name = "options2_sol", path = "src/bin/solutions/12_options/options2.rs" },
  { name = "options3", path = "src/bin//12_options/options3.rs" },
  { name = "options3_sol", path = "src/bin/solutions/12_options/options3.rs" },
  { name = "errors1", path = "src/bin//13_error_handling/errors1.rs" },
  { name = "errors1_sol", path = "src/bin/solutions/13_error_handling/errors1.rs" },
  { name = "errors2", path = "src/bin//13_error_handling/errors2.rs" },
  { name = "errors2_sol", path = "src/bin/solutions/13_error_handling/errors2.rs" },
  { name = "errors3", path = "src/bin//13_error_handling/errors3.rs" },
  { name = "errors3_sol", path = "src/bin/solutions/13_error_handling/errors3.rs" },
  { name = "errors4", path = "src/bin//13_error_handling/errors4.rs" },
  { name = "errors4_sol", path = "src/bin/solutions/13_error_handling/errors4.rs" },
  { name = "errors5", path = "src/bin//13_error_handling/errors5.rs" },
  { name = "errors5_sol", path = "src/bin/solutions/13_error_handling/errors5.rs" },
  { name = "errors6", path = "src/bin//13_error_handling/errors6.rs" },
  { name = "errors6_sol", path = "src/bin/solutions/13_error_handling/errors6.rs" },
  { name = "generics1", path = "src/bin//14_generics/generics1.rs" },
  { name = "generics1_sol", path = "src/bin/solutions/14_generics/generics1.rs" },
  { name = "generics2", path = "src/bin//14_generics/generics2.rs" },
  { name = "generics2_sol", path = "src/bin/solutions/14_generics/generics2.rs" },
  { name = "traits1", path = "src/bin//15_traits/traits1.rs" },
  { name = "traits1_sol", path = "src/bin/solutions/15_traits/traits1.rs" },
  { name = "traits2", path = "src/bin//15_traits/traits2.rs" },
  { name = "traits2_sol", path = "src/bin/solutions/15_traits/traits2.rs" },
  { name = "traits3", path = "src/bin//15_traits/traits3.rs" },
  { name = "traits3_sol", path = "src/bin/solutions/15_traits/traits3.rs" },
  { name = "traits4", path = "src/bin//15_traits/traits4.rs" },
  { name = "traits4_sol", path = "src/bin/solutions/15_traits/traits4.rs" },
  { name = "traits5", path = "src/bin//15_traits/traits5.rs" },
  { name = "traits5_sol", path = "src/bin/solutions/15_traits/traits5.rs" },
  { name = "quiz3", path = "src/bin//quizzes/quiz3.rs" },
  { name = "quiz3_sol", path = "src/bin/solutions/quizzes/quiz3.rs" },
  { name = "lifetimes1", path = "src/bin//16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes1_sol", path = "src/bin/solutions/16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes2", path = "src/bin//16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes2_sol", path = "src/bin/solutions/16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes3", path = "src/bin//16_lifetimes/lifetimes3.rs" },
  { name = "lifetimes3_sol", path = "src/bin/solutions/16_lifetimes/lifetimes3.rs" },
  { name = "tests1", path = "src/bin//17_tests/tests1.rs" },
  { name = "tests1_sol", path = "src/bin/solutions/17_tests/tests1.rs" },
  { name = "tests2", path = "src/bin//17_tests/tests2.rs" },
  { name = "tests2_sol", path = "src/bin/solutions/17_tests/tests2.rs" },
  { name = "tests3", path = "src/bin//17_tests/tests3.rs" },
  { name = "tests3_sol", path = "src/bin/solutions/17_tests/tests3.rs" },
  { name = "iterators1", path = "src/bin//18_iterators/iterators1.rs" },
  { name = "iterators1_sol", path = "src/bin/solutions/18_iterators/iterators1.rs" },
  { name = "iterators2", path = "src/bin//18_iterators/iterators2.rs" },
  { name = "iterators2_sol", path = "src/bin/solutions/18_iterators/iterators2.rs" },
  { name = "iterators3", path = "src/bin//18_iterators/iterators3.rs" },
  { name = "iterators3_sol", path = "src/bin/solutions/18_iterators/iterators3.rs" },
  { name = "iterators4", path = "src/bin//18_iterators/iterators4.rs" },
  { name = "iterators4_sol", path = "src/bin/solutions/18_iterators/iterators4.rs" },
  { name = "iterators5", path = "src/bin//18_iterators/iterators5.rs" },
  { name = "iterators5_sol", path = "src/bin/solutions/18_iterators/iterators5.rs" },
  { name = "box1", path = "src/bin//19_smart_pointers/box1.rs" },
  { name = "box1_sol", path = "src/bin/solutions/19_smart_pointers/box1.rs" },
  { name = "rc1", path = "src/bin//19_smart_pointers/rc1.rs" },
  { name = "rc1_sol", path = "src/bin/solutions/19_smart_pointers/rc1.rs" },
  { name = "arc1", path = "src/bin//19_smart_pointers/arc1.rs" },
  { name = "arc1_sol", path = "src/bin/solutions/19_smart_pointers/arc1.rs" },
  { name = "cow1", path = "src/bin//19_smart_pointers/cow1.rs" },
  { name = "cow1_sol", path = "src/bin/solutions/19_smart_pointers/cow1.rs" },
  { name = "threads1", path = "src/bin//20_threads/threads1.rs" },
  { name = "threads1_sol", path = "src/bin/solutions/20_threads/threads1.rs" },
  { name = "threads2", path = "src/bin//20_threads/threads2.rs" },
  { name = "threads2_sol", path = "src/bin/solutions/20_threads/threads2.rs" },
  { name = "threads3", path = "src/bin//20_threads/threads3.rs" },
  { name = "threads3_sol", path = "src/bin/solutions/20_threads/threads3.rs" },
  { name = "macros1", path = "src/bin//21_macros/macros1.rs" },
  { name = "macros1_sol", path = "src/bin/solutions/21_macros/macros1.rs" },
  { name = "macros2", path = "src/bin//21_macros/macros2.rs" },
  { name = "macros2_sol", path = "src/bin/solutions/21_macros/macros2.rs" },
  { name = "macros3", path = "src/bin//21_macros/macros3.rs" },
  { name = "macros3_sol", path = "src/bin/solutions/21_macros/macros3.rs" },
  { name = "macros4", path = "src/bin//21_macros/macros4.rs" },
  { name = "macros4_sol", path = "src/bin/solutions/21_macros/macros4.rs" },
  { name = "clippy1", path = "src/bin//22_clippy/clippy1.rs" },
  { name = "clippy1_sol", path = "src/bin/solutions/22_clippy/clippy1.rs" },
  { name = "clippy2", path = "src/bin//22_clippy/clippy2.rs" },
  { name = "clippy2_sol", path = "src/bin/solutions/22_clippy/clippy2.rs" },
  { name = "clippy3", path = "src/bin//22_clippy/clippy3.rs" },
  { name = "clippy3_sol", path = "src/bin/solutions/22_clippy/clippy3.rs" },
  { name = "using_as", path = "src/bin//23_conversions/using_as.rs" },
  { name = "using_as_sol", path = "src/bin/solutions/23_conversions/using_as.rs" },
  { name = "from_into", path = "src/bin//23_conversions/from_into.rs" },
  { name = "from_into_sol", path = "src/bin/solutions/23_conversions/from_into.rs" },
  { name = "from_str", path = "src/bin//23_conversions/from_str.rs" },
  { name = "from_str_sol", path = "src/bin/solutions/23_conversions/from_str.rs" },
  { name = "try_from_into", path = "src/bin//23_conversions/try_from_into.rs" },
  { name = "try_from_into_sol", path = "src/bin/solutions/23_conversions/try_from_into.rs" },
  { name = "as_ref_mut", path = "src/bin//23_conversions/as_ref_mut.rs" },
  { name = "as_ref_mut_sol", path = "src/bin/solutions/23_conversions/as_ref_mut.rs" },
]
[package]
name = "exercises"
version = "0.1.0"
edition = "2021"

[dependencies]
